syntax = "proto3";

option java_package = "com.example.faircon";
option java_multiple_files = true;

message ControllerPreferences {
  int32 fan_speed = 1;
  float required_temperature = 2;
  float tec_voltage = 3;
}